fix letter alignment

--- a/src/App.css
+++ b/src/App.css
@@ -41,8 +41,8 @@ h3::after {
 h4 {
   min-height: 41px;
   font-size: 28px;
-  letter-spacing: 100px;
-  margin-right: -90px;
+  letter-spacing: 95px;
+  margin-right: -95px;
 }
 
 @media only screen and (max-width: 1092px) {
@@ -52,8 +52,8 @@ h4 {
 
   h4 {
     font-size: 20px;
-    letter-spacing: 40px;
-    margin-right: -30px;
+    letter-spacing: 35px;
+    margin-right: -40px;
   }
 }
 
@@ -64,8 +64,8 @@ h4 {
 
   h4 {
     font-size: 18px;
-    letter-spacing: 20px;
-    margin-right: -10px;
+    letter-spacing: 16px;
+    margin-right: -25px;
   }
 }
 
